fixed punctuation in posts and alignment for desktop pages

--- a/src/app/posts/posts.module.css
+++ b/src/app/posts/posts.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  place-items: center;
+  align-items: center;
+  align-self: center;
 
   & h2 {
     text-align: center;
